--- a/JosephusProblem/JosephusProblem/JosephusProblem.vcxproj
+++ b/JosephusProblem/JosephusProblem/JosephusProblem.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Josephus.cpp" />
+    <ClCompile Include="Josephus2.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
