--- a/ExpressionTree/ExpressionTree/ExpressionTree.vcxproj.filters
+++ b/ExpressionTree/ExpressionTree/ExpressionTree.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TreeTraverse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TreeTraverseSolution.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ExpressionTreeReference.md">
